--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-bytemd",
+  "name": "vue2c2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.20.2",
+    "@bytemd/plugin-frontmatter": "^1.20.2",
+    "@bytemd/plugin-gemoji": "^1.20.2",
+    "@bytemd/plugin-gfm": "^1.20.2",
+    "@bytemd/plugin-highlight": "^1.20.2",
+    "@bytemd/plugin-highlight-ssr": "^1.20.2",
+    "@bytemd/plugin-math": "^1.20.2",
+    "@bytemd/plugin-math-ssr": "^1.20.2",
+    "@bytemd/plugin-medium-zoom": "^1.20.2",
+    "@bytemd/plugin-mermaid": "^1.20.2",
+    "@bytemd/vue": "^1.20.2",
+    "bytemd": "^1.20.2",
     "core-js": "^3.8.3",
+    "juejin-markdown-themes": "^1.29.5",
     "vue": "^2.6.14"
   },
   "devDependencies": {
